--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -311,8 +311,8 @@
   --blue-400: #60a5fa;
   --blue-500: #3b82f6;
   --blue-600: #0080b7;
-  --blue-700: #309ca5;
-  --blue-900: #0f6483;
+  --blue-700: #2f69a3;
+  --blue-900: #245280;
   --indigo-50: #1a2332;
   --indigo-100: #2d2416;
   --indigo-200: #2d2416;
